Rewrote the Replication worker catalog exportation service
The initial implementation that was based on the low-level TCP protocol
has been replaced with the REST server.

--- a/src/replica/worker/CMakeLists.txt
+++ b/src/replica/worker/CMakeLists.txt
@@ -7,6 +7,8 @@ target_sources(replica_worker PRIVATE
     WorkerDeleteRequest.cc
     WorkerDirectorIndexRequest.cc
     WorkerEchoRequest.cc
+    WorkerExporterHttpSvc.cc
+    WorkerExporterHttpSvcMod.cc
     WorkerFindAllRequest.cc
     WorkerFindRequest.cc
     WorkerProcessor.cc
@@ -20,4 +22,5 @@ target_sources(replica_worker PRIVATE
 )
 target_link_libraries(replica_worker PUBLIC
     log
+    sphgeom
 )
