--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,11 +116,12 @@ jobs:
         with:
           fetch-depth: 0  # 0 is "all history and branch tags"
 
-      - name: Login to DockerHub
+      - name: Login to ghcr
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.FM_DOCKERHUB_TOKEN_USER }}
-          password: ${{ secrets.FM_DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Rebuild and push build base image if needed
         id: rebuild
@@ -171,11 +172,12 @@ jobs:
         with:
           fetch-depth: 0  # 0 is "all history and branch tags"
 
-      - name: Login to DockerHub
+      - name: Login to ghcr
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.FM_DOCKERHUB_TOKEN_USER }}
-          password: ${{ secrets.FM_DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Rebuild and push mariadb image if needed
         id: rebuild
@@ -216,11 +218,12 @@ jobs:
         run: |
           git submodule update --init
 
-      - name: Login to DockerHub
+      - name: Login to ghcr
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.FM_DOCKERHUB_TOKEN_USER }}
-          password: ${{ secrets.FM_DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prepare user build image
         run: |
@@ -266,11 +269,12 @@ jobs:
         with:
           fetch-depth: 0  # 0 is "all history and branch tags"
 
-      - name: Login to DockerHub
+      - name: Login to ghcr
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.FM_DOCKERHUB_TOKEN_USER }}
-          password: ${{ secrets.FM_DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Launch qserv
         run: |
